<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_gredient"
    app:layoutDescription="@xml/activity_login_scene"
    tools:context=".ui.activity.Login">

    <RelativeLayout
        android:id="@+id/parentRelative"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="center_horizontal">

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:elevation="3dp"
            android:indeterminateTint="@color/white"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"/>

        <VideoView
            android:id="@+id/intro_vid"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cabin_semibold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:shadowColor="@color/white"
        android:shadowDy="1"
        android:shadowDx="1"
        android:shadowRadius="2"
        app:layout_constraintVertical_bias="0.1"
        android:transitionName="@string/app_transition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cabin_semibold"
        android:text="@string/login_desc"
        android:textAlignment="center"
        android:textColor="@color/semiWhite"
        android:shadowDy="1"
        android:shadowDx="1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ads_main_banner_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/accept_lt"/>

    <LinearLayout
        android:id="@+id/accept_lt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_txt"
        app:layout_constraintStart_toStartOf="@+id/sign_in_txt"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_txt">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/terms_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin_semibold"
                android:text="I have read "
                android:textColor="@color/semiWhite"/>
            <TextView
                android:id="@+id/privacy_policy_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin_semibold"
                android:text="@string/privacy_policy"
                android:shadowDy="1"
                android:shadowDx="1"
                android:shadowColor="@color/black"
                android:textColor="@color/colorHighlight"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin_semibold"
                android:text=" and agree to all the "
                android:textColor="@color/semiWhite"/>
        </LinearLayout>
        <TextView
            android:id="@+id/terms_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin_semibold"
            android:text="@string/terms_condition"
            android:shadowDy="1"
            android:shadowDx="1"
            android:shadowColor="@color/black"
            android:textColor="@color/colorHighlight"/>
    </LinearLayout>

    <TextView
        android:id="@+id/sign_in_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textAllCaps="true"
        android:background="@drawable/bg_grdnt"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:padding="12dp"
        android:enabled="false"
        android:text="Continue"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/skip_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/skip_txt"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bg_grdnt"
        android:fontFamily="sans-serif"
        android:padding="12dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:text="Try Demo"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>