<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_splash_scene"
    tools:context=".ui.activity.Splash"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/grp_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/upload_lt"
        android:orientation="vertical">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/cabin_semibold"
            android:text="@string/presented_by"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:fontFamily="@font/cabin_semibold"
            android:text="@string/developer_name"/>
        
    </LinearLayout>

    <TextView
        android:id="@+id/app_name_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/colorPrimaryDark"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowColor="@color/colorPrimaryDark"
        android:alpha="1"
        android:transitionName="@string/app_transition"
        android:textAllCaps="true"
        android:textSize="28sp"
        android:fontFamily="@font/cabin_semibold"
        android:text="@string/app_name"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/upload_lt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="0dp"
        app:cardElevation="4dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <VideoView
                android:id="@+id/video_preview"
                android:layout_width="match_parent"
                android:layout_height="180dp"/>

            <EditText
                android:id="@+id/title_et"
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Video Title" />

            <EditText
                android:id="@+id/description_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Video Description" />

            <Spinner
                android:id="@+id/spin_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:entries="@array/emotions"
                android:padding="12dp"/>

            <Button
                android:id="@+id/upload_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/g_shade"
                android:text="upload video"
                android:fontFamily="@font/cabin_semibold"/>

            <ProgressBar
                android:id="@+id/upload_progress"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.motion.widget.MotionLayout>